cluster/apps/komga/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: komga
  labels:
    app.kubernetes.io/name: komga
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: komga
  template:
    metadata:
      labels:
        app.kubernetes.io/name: komga
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: komga
          image: gotson/komga:latest
          ports:
            - containerPort: 25600
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "1Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: komga-config
        - name: data
          persistentVolumeClaim:
            claimName: komga-data
